added css for texts

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,47 @@
+@font-face {
+    font-family: 'Rocher';
+    src: url(https://assets.codepen.io/9632/RocherColorGX.woff2);
+}
+
+body {
+    font-family: 'Rocher';
+}
+
+body > h1,h2, h3 {
+    padding: 8px;
+}
+
+@font-palette-values --Grays {
+    font-family: Rocher;
+    base-palette: 9;
+}
+
+@font-palette-values --Purples {
+    font-family: Rocher;
+    base-palette: 6;
+}
+
+@font-palette-values --Mint {
+    font-family: Rocher;
+    base-palette: 7;
+}
+
+.grays {
+    font-palette: --Grays;
+}
+
+.purples {
+    font-palette: --Purples;
+}
+
+.mint {
+    font-palette: --Mint;
+}
+
+
+
+
+
 .App {
     display: flex;
     flex-direction: column;
@@ -7,7 +51,9 @@
 }
 
 .cat {
-    width: 50vw;
+    width: 100%;
+    max-width: 300px;
+    height: auto;
 }
 
 /* CSS */
